--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "description": "React rich web application: Crime & Safety Dashboard using UK Police Data API with postcode/place geocoding.",
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -10,6 +11,7 @@
     "react-scripts": "^5.0.1"
   },
   "scripts": {
+    "dev:api": "node api/dev-server.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
