--- a/package.json
+++ b/package.json
@@ -5,22 +5,24 @@
   "description": "React rich web application: Crime & Safety Dashboard using UK Police Data API with postcode/place geocoding.",
   "proxy": "http://localhost:3001",
   "dependencies": {
-    "typescript": "^4.9.5",
     "@iconify/icons-lucide": "^1.2.135",
     "@iconify/react": "^6.0.2",
+    "firebase": "^10.12.4",
+    "firebase-admin": "^13.6.0",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.12.0",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "typescript": "^4.9.5"
   },
   "scripts": {
-    "dev:api": "node api/dev-server.js",
-    "start": "react-scripts start",
+    "generate:sitemap:routes": "node scripts/generate-sitemap-routes.js",
+    "generate:sitemap": "node scripts/generate-sitemap.js",
+    "prebuild": "npm run generate:sitemap:routes && npm run generate:sitemap",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test"
   },
   "browserslist": {
     "production": [
