--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "typescript": "^4.9.5"
   },
   "scripts": {
+    "start": "react-scripts start",
     "generate:sitemap:routes": "node scripts/generate-sitemap-routes.js",
     "generate:sitemap": "node scripts/generate-sitemap.js",
     "prebuild": "npm run generate:sitemap:routes && npm run generate:sitemap",
     "build": "react-scripts build",
     "test": "react-scripts test"
+
   },
   "browserslist": {
     "production": [
