fix(journal): restore feed loading with robust Firestore query + dedupe

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,9 @@ setAdmin.js
 # Generated files
 public/sitemap.xml
 
+serviceAccount*.json
+*service-account*.json
+firebase-admin*.json
+*.pem
+*.key
+*.p12
