--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "description": "React rich web application: Crime & Safety Dashboard using UK Police Data API with postcode/place geocoding.",
+  "proxy": "http://localhost:3002",
   "dependencies": {
     "@iconify/icons-lucide": "^1.2.135",
     "@iconify/react": "^6.0.2",
